remove duplicated lesson and modify  link in relative pages

--- a/docs/create/gcp/index-gcp.mdx
+++ b/docs/create/gcp/index-gcp.mdx
@@ -49,7 +49,7 @@ Launch [Redis Enterprise Cloud page](https://console.cloud.google.com/apis/libra
 ### Next Steps
 
 - [Connecting to the database using RedisInsight](/explore/redisinsight/)
-- [How to list & search Movies database using Redisearch](/howtos/shoppingcart/)
+- [How to list & search Movies database using Redisearch](/howtos/redisjson/shoppingcart/)
 
 ##
 
