--- a/docs/howtos/redisjson/using-nodejs/index-usingnodejs.mdx
+++ b/docs/howtos/redisjson/using-nodejs/index-usingnodejs.mdx
@@ -129,5 +129,5 @@ OK
 - [How to store and retrieve nested JSON documents](/howtos/redisjson/storing-complex-json-document)
 - [Importing JSON data into Redis using Node.js](/howtos/redisjson/using-nodejs)
 - Learn more about [RedisJSON](https://redisjson.io/) in the Quickstart tutorial.
-- [How to build a shopping cart app using Node.js and RedisJSON](/howtos/shoppingcart)
+- [How to build a shopping cart app using Node.js and RedisJSON](/howtos/redisjson/shoppingcart)
 - [Indexing, Querying, and Full-Text Search of JSON Documents with Redis](https://redis.com/blog/index-and-query-json-docs-with-redis/)
