--- a/docs/create/cloud/gcp/index-gcp.mdx
+++ b/docs/create/cloud/gcp/index-gcp.mdx
@@ -44,4 +44,4 @@ Launch [Redis Enterprise Cloud page](https://console.cloud.google.com/apis/libra
 ### Next Steps
 
 - [Connecting to the database using RedisInsight](/explore/redisinsight/)
-- [How to list & search Movies database using Redisearch](/howtos/shoppingcart/)
+- [How to list & search Movies database using Redisearch](/howtos/redisjson/shoppingcart/)
