--- a/docs/howtos/hackernews/index-hackernews.mdx
+++ b/docs/howtos/hackernews/index-hackernews.mdx
@@ -426,5 +426,5 @@ It will require new hash and new JSON record
 - [How to store and retrieve nested JSON document](/howtos/redisjson/storing-complex-json-document)
 - [Importing JSON data into Redis using NodeJS](/howtos/redisjson/using-nodejs)
 - Learn more about [RedisJSON](https://oss.redis.com/redisjson/) in the Quickstart tutorial.
-- [How to build shopping cart app using NodeJS and RedisJSON](/howtos/shoppingcart)
+- [How to build shopping cart app using NodeJS and RedisJSON](/howtos/redisjson/shoppingcart/)
 - [Indexing, Querying, and Full-Text Search of JSON Documents with Redis](https://redis.com/blog/index-and-query-json-docs-with-redis/)
