--- a/docs/howtos/redisjson/using-go/index-usinggo.mdx
+++ b/docs/howtos/redisjson/using-go/index-usinggo.mdx
@@ -131,5 +131,5 @@ Follow the below steps to get started with RedisJSON using Go client.
 - [How to store and retrieve nested JSON document](/howtos/redisjson/storing-complex-json-document)
 - [Importing JSON data into Redis using NodeJS](/howtos/redisjson/using-nodejs)
 - Learn more about [RedisJSON](https://oss.redis.com/redisjson/) in the Quickstart tutorial.
-- [How to build shopping cart app using NodeJS and RedisJSON](/howtos/shoppingcart)
+- [How to build shopping cart app using NodeJS and RedisJSON](/howtos/redisjson/shoppingcart/)
 - [Indexing, Querying, and Full-Text Search of JSON Documents with Redis](https://redis.com/blog/index-and-query-json-docs-with-redis/)
