--- a/docs/develop/node/node-crash-course/redisearch/index-redisearch.mdx
+++ b/docs/develop/node/node-crash-course/redisearch/index-redisearch.mdx
@@ -112,7 +112,7 @@ const searchResults = await redis.performSearch(
 );
 ```
 
-with one containing the correct RediSearch query to return users whose "lastSeenAt" field is set to the value of locationId. You'll need to use the "numeric range" syntax for this, as the "lastSeenAt" field was indexed as a number. Be sure to check out the [Query Syntax documentation](https://oss.redis.com/redisearch/Query_Syntax/) for RediSearch to get help with this.
+with one containing the correct RediSearch query to return users whose "lastSeenAt" field is set to the value of locationId. You'll need to use the "numeric range" syntax for this, as the "lastSeenAt" field was indexed as a number. Be sure to check out the [Query Syntax documentation](https://redis.io/docs/stack/search/reference/query_syntax/) for RediSearch to get help with this.
 
 To try your code, ensure that the API Server component is running:
 
