--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,6 @@ Check out our upcoming events:
 
 |        Date             |    Time     | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Friday, November 25     | 6:00 PM UTC | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                     | [This Week On Discord][twitch]                                                                       |
 | Monday, November 28     | 3:00 PM PST | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                                                    |   
 | Thursday, December 1    | 10:30 AM UTC| [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: New Project!][twitch]                                                  |
 | Thursday, December 1    | 4:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs]                                                           |
@@ -61,8 +60,10 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
+| Friday, November 25     | 6:00 PM UTC | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                     | [This Week On Discord][59]                                                                       |
 | Thursday, November 24  | 4:00 PM UTC  | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                     | [Redis University Office Hours][officehrs]                                                       |
-| Thursday, November 24  | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Synchronized Counting with Keyspace Notifications - Episode 2][57] |
+| Thursday, November 24  | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Synchronized Counting with Keyspace Notifications - Episode 2][58] |
+| Tuesday, November 22   | 6:00 PM UTC  | [Savannah Norem][norem] .                                                                             | [savannah_streams_in_snake_case][57]                                                             |
 | Monday, November 21    | 3:00 PM PST  | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON? - Episode 3][56]                                                        |
 | Friday, November 18    | 6:00 PM UTC  | [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin]                        | [This Week On Discord][55]                                                                       |
 | Thursday, November 17  | 4:00 PM UTC  | [Justin Castilla][justin]                                                                             | [Redis University Office Hours][officehrs]                                                       |
@@ -164,7 +165,9 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
-[57]: https://www.youtube.com/watch?v=Ad7zHs5ViWw
+[59]: https://www.youtube.com/watch?v=0Y6ICNA3nn0
+[58]: https://www.youtube.com/watch?v=Ad7zHs5ViWw
+[57]: https://www.youtube.com/watch?v=zSC1uUML-uM
 [56]: https://www.youtube.com/watch?v=SiJfrsSJBHg
 [55]: https://www.youtube.com/watch?v=xbX7tnHx7WA
 [54]: https://www.youtube.com/watch?v=NJyR8FKb9aI
