--- a/docs/guides/security/how-to-use-tls-with-redis-enterprise/how-to-use-ssl-tls-with-redis-enterprise.mdx
+++ b/docs/guides/security/how-to-use-tls-with-redis-enterprise/how-to-use-ssl-tls-with-redis-enterprise.mdx
@@ -205,13 +205,13 @@ import fs from 'fs';
 const ssl = {
   key: fs.readFileSync(
     '../certificates/client_key_app_001.pem',
-    (encoding = 'ascii'),
+    {encoding: 'ascii'},
   ),
   cert: fs.readFileSync(
     '../certificates/client_cert_app_001.pem',
-    (encoding = 'ascii'),
+    {encoding: 'ascii'},
   ),
-  ca: [fs.readFileSync('../certificates/proxy_cert.pem', (encoding = 'ascii'))],
+  ca: [fs.readFileSync('../certificates/proxy_cert.pem', {encoding: 'ascii'})],
   checkServerIdentity: () => {
     return null;
   },
