Moved 1 Dec Things on Thursdays.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,6 @@ Check out our upcoming events:
 
 |        Date             |    Time     | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Thursday, December 1    | 10:30 AM UTC| [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: New Project!][twitch]                                                  |
 | Thursday, December 1    | 4:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs]                                                           |
 | Friday, December 2      | 6:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                                                       |
 | Monday, December 5      | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                   | [RU204: Live][twitch]                                                                                |
@@ -59,7 +58,8 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
-| Friday, November 25     | 6:00 PM UTC | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                     | [This Week On Discord][59]                                                                       |
+| Thursday, December 1   | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Wifi Setup with Raspberry Pi Pico W][60]                           |
+| Friday, November 25    | 6:00 PM UTC  | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                     | [This Week On Discord][59]                                                                       |
 | Thursday, November 24  | 4:00 PM UTC  | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                     | [Redis University Office Hours][officehrs]                                                       |
 | Thursday, November 24  | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Synchronized Counting with Keyspace Notifications - Episode 2][58] |
 | Tuesday, November 22   | 6:00 PM UTC  | [Savannah Norem][norem] .                                                                             | [savannah_streams_in_snake_case][57]                                                             |
@@ -164,6 +164,7 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[60]: https://www.youtube.com/watch?v=Gzp9nLkqadg
 [59]: https://www.youtube.com/watch?v=0Y6ICNA3nn0
 [58]: https://www.youtube.com/watch?v=Ad7zHs5ViWw
 [57]: https://www.youtube.com/watch?v=zSC1uUML-uM
