--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,6 @@ Check out our upcoming events:
 
 |        Date             |    Time     | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Thursday, December 1    | 4:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs]                                                           |
 | Friday, December 2      | 6:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                                                       |
 | Monday, December 5      | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                   | [RU204: Live][twitch]                                                                                |
 | Monday, December 5      | 3:00 PM PST | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                                                    |
@@ -58,6 +57,7 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
+| Thursday, December 1   | 4:00 PM UTC  | [Suze Shardlow][Suze], [Simon Prickett][simon] and [Justin Castilla][justin]                          | [Redis University Office Hours][officehrs]                                                       |
 | Thursday, December 1   | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Wifi Setup with Raspberry Pi Pico W][60]                           |
 | Friday, November 25    | 6:00 PM UTC  | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                     | [This Week On Discord][59]                                                                       |
 | Thursday, November 24  | 4:00 PM UTC  | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                     | [Redis University Office Hours][officehrs]                                                       |
