Moves Dec 2 Week on Discord adds YT link.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,6 @@ Check out our upcoming events:
 
 |        Date             |    Time     | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Friday, December 2      | 6:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                                                       |
 | Monday, December 5      | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                   | [RU204: Live][twitch]                                                                                |
 | Monday, December 5      | 3:00 PM PST | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                                                    |
 | Tuesday, December 6     | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                   | [RU204: Live][twitch]                                                                                |
@@ -56,6 +55,7 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
+| Friday, December 2     | 6:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][61]                                                                       |
 | Thursday, December 1   | 4:00 PM UTC  | [Suze Shardlow][Suze], [Simon Prickett][simon] and [Justin Castilla][justin]                          | [Redis University Office Hours][officehrs]                                                       |
 | Thursday, December 1   | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Wifi Setup with Raspberry Pi Pico W][60]                           |
 | Friday, November 25    | 6:00 PM UTC  | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                     | [This Week On Discord][59]                                                                       |
@@ -163,6 +163,7 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[61]: https://www.youtube.com/watch?v=i6Qd6PvONag
 [60]: https://www.youtube.com/watch?v=Gzp9nLkqadg
 [59]: https://www.youtube.com/watch?v=0Y6ICNA3nn0
 [58]: https://www.youtube.com/watch?v=Ad7zHs5ViWw
