Re-adds Dec 8 Things on Thu.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -22,18 +22,19 @@ The Redis Developer Relations Team hosts a variety of live content on [Twitch][t
 
 Check out our upcoming events:
 
-|        Date             |    Time     | Streamers                                                                                             | Show                                                                                                 |
-| :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Monday, December 5      | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                   | [RU204: Live][twitch]                                                                                |
-| Monday, December 5      | 3:00 PM PST | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                                                    |
-| Tuesday, December 6     | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                   | [RU204: Live][twitch]                                                                                |
-| Wednesday, December 7   | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                   | [RU204: Live][twitch]                                                                                |
-| Thursday, December 8    | 4:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs]                                                           |
-| Thursday, December 8    | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                   | [RU204: Live][twitch]                                                                                |
-| Friday, December 9      | 6:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                                                       |
-| Friday, December 9      | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                   | [RU204: Live][twitch]                                                                                |
-| Thursday, December 15   | 4:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs]                                                           |
-| Friday, December 16     | 6:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                                                       |
+|        Date             |    Time     | Streamers                                                                                              | Show                                                                                                 |
+| :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
+| Monday, December 5      | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live][twitch]                                                                                |
+| Monday, December 5      | 3:00 PM PST  | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                                                    |
+| Tuesday, December 6     | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live][twitch]                                                                                |
+| Wednesday, December 7   | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live][twitch]                                                                                |
+| Thursday, December 8    | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: New Project][twitch]                                                   |
+| Thursday, December 8    | 4:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs]                                                           |
+| Thursday, December 8    | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live][twitch]                                                                                |
+| Friday, December 9      | 6:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                                                       |
+| Friday, December 9      | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live][twitch]                                                                                |
+| Thursday, December 15   | 4:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs]                                                           |
+| Friday, December 16     | 6:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                                                       |
 
   </TabItem>
   <TabItem value="recurring">
