Moved old events, adds Simon Dec 15 event.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,15 +24,11 @@ Check out our upcoming events:
 
 |        Date             |    Time     | Streamers                                                                                              | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Monday, December 5      | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live][twitch]                                                                                |
-| Monday, December 5      | 3:00 PM PST  | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                                                    |
-| Tuesday, December 6     | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live][twitch]                                                                                |
-| Wednesday, December 7   | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live][twitch]                                                                                |
-| Thursday, December 8    | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: New Project][twitch]                                                   |
 | Thursday, December 8    | 4:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs]                                                           |
-| Thursday, December 8    | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live][twitch]                                                                                |
+| Thursday, December 8    | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live Day 4][twitch]                                                                          |
 | Friday, December 9      | 6:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                                                       |
-| Friday, December 9      | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live][twitch]                                                                                |
+| Friday, December 9      | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live Day 5][twitch]                                                                          |
+| Thursday, December 15   | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Node-RED Episode 2][twitch]                                            |
 | Thursday, December 15   | 4:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs]                                                           |
 | Friday, December 16     | 6:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                                                       |
 
@@ -56,6 +52,11 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
+| Thursday, December 8   | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Node-RED Episode 1][66]                                            |
+| Wednesday, December 7  | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live Day 3][65]                                                                          |
+| Tuesday, December 6    | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live Day 2][64]                                                                          |
+| Monday, December 5     | 3:00 PM PST  | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][63]                                                                    |
+| Monday, December 5     | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live Day 1][62]                                                                          |
 | Friday, December 2     | 6:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][61]                                                                       |
 | Thursday, December 1   | 4:00 PM UTC  | [Suze Shardlow][Suze], [Simon Prickett][simon] and [Justin Castilla][justin]                          | [Redis University Office Hours][officehrs]                                                       |
 | Thursday, December 1   | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Wifi Setup with Raspberry Pi Pico W][60]                           |
@@ -164,6 +165,11 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[66]: https://www.youtube.com/watch?v=byt8jWg6M98
+[65]: https://www.youtube.com/watch?v=cdeSuxdVELc
+[64]: https://www.youtube.com/watch?v=ZUBqYN8x8Og
+[63]: https://www.youtube.com/watch?v=XkzSHMLYN1Q
+[62]: https://www.youtube.com/watch?v=spKn5FAsYZc
 [61]: https://www.youtube.com/watch?v=i6Qd6PvONag
 [60]: https://www.youtube.com/watch?v=Gzp9nLkqadg
 [59]: https://www.youtube.com/watch?v=0Y6ICNA3nn0
