Moved Dec 9 week on Discord & Dec 8 204.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,8 +24,6 @@ Check out our upcoming events:
 
 |        Date             |    Time     | Streamers                                                                                              | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Thursday, December 8    | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live Day 4][twitch]                                                                          |
-| Friday, December 9      | 6:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                                                       |
 | Friday, December 9      | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live Day 5][twitch]                                                                          |
 | Thursday, December 15   | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Node-RED Episode 2][twitch]                                            |
 | Thursday, December 15   | 4:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs]                                                           |
@@ -51,7 +49,9 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
-| Thursday, December 8    | 4:00 PM UTC  | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                    | [Redis University Office Hours][officehrs]                                                       |
+| Friday, December 9     | 6:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][68]                                                                       |
+| Thursday, December 8   | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live Day 4][67]                                                                          |
+| Thursday, December 8   | 4:00 PM UTC  | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                     | [Redis University Office Hours][officehrs]                                                       |
 | Thursday, December 8   | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Node-RED Episode 1][66]                                            |
 | Wednesday, December 7  | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live Day 3][65]                                                                          |
 | Tuesday, December 6    | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live Day 2][64]                                                                          |
@@ -165,6 +165,8 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[68]: https://www.youtube.com/watch?v=ml-Pm_B5S9w
+[67]: https://www.youtube.com/watch?v=FMoK4c_6rI0
 [66]: https://www.youtube.com/watch?v=byt8jWg6M98
 [65]: https://www.youtube.com/watch?v=cdeSuxdVELc
 [64]: https://www.youtube.com/watch?v=ZUBqYN8x8Og
