Moved past shows, adds some Jan ones.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -22,12 +22,14 @@ The Redis Developer Relations Team hosts a variety of live content on [Twitch][t
 
 Check out our upcoming events:
 
-|        Date             |    Time     | Streamers                                                                                              | Show                                                                                                 |
+|        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Friday, December 9      | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live Day 5][twitch]                                                                          |
 | Thursday, December 15   | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Node-RED Episode 2][twitch]                                            |
 | Thursday, December 15   | 4:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs]                                                           |
 | Friday, December 16     | 6:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                                                       |
+| Thursday, January 5     | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: New Project][twitch]                                                   |
+| Thursday, January 5     | 4:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs]                                                           |
+| Friday, January 6       | 6:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                                                       |
 
   </TabItem>
   <TabItem value="recurring">
@@ -49,6 +51,8 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
+| Monday, December 12    | 3:00 PM PST  | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][70]                                                                    |
+| Friday, December 9     | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live Day 5][69]                                                                          |
 | Friday, December 9     | 6:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][68]                                                                       |
 | Thursday, December 8   | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live Day 4][67]                                                                          |
 | Thursday, December 8   | 4:00 PM UTC  | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                     | [Redis University Office Hours][officehrs]                                                       |
@@ -165,6 +169,8 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[70]: https://www.youtube.com/watch?v=EQEzqMtyEeA
+[69]: https://www.youtube.com/watch?v=VKDkPWSm9lk
 [68]: https://www.youtube.com/watch?v=ml-Pm_B5S9w
 [67]: https://www.youtube.com/watch?v=FMoK4c_6rI0
 [66]: https://www.youtube.com/watch?v=byt8jWg6M98
